--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -1,22 +1,15 @@
-name: Run Python Tests
+stages:
+  - build
+  - test
+  - deploy
 
-on: 
-  push:  # 👉 запускать при любом push в любую ветку
-
-jobs:
-  test:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.11'
-
-      - name: Install dependencies
-        run: pip install -r requirements.txt
-
-      - name: Run tests
-        run: pytest
+before_script:
+  - $PSVersionTable.PSVersion
+  - dotnet --version
+  - nuget help | select-string Version
+  
+dummy job on windows:
+  script:
+    - echo ok
+  tags:
+    - windows
